--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "8081:8081"
     volumes:
       - ./logs:/app/logs
+      - /etc/localtime:/etc/localtime:ro  # Share host timezone
     deploy:
       resources:
         reservations:
