--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,6 +21,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v3.7.0
+      - name: Check install!
+        run: cosign version
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
