--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - TZ=America/Los_Angeles   # update your timezone
     volumes:
       - /etc/localtime:/etc/localtime:ro  # Share host timezone
-      - ./history:/app/history    # Persist historical data on host (optional)
-      - ./logs:/app/logs    # Persist logs                          (optional)
+      - ./history:/app/history    # Persist historical data on host
+      - ./logs:/app/logs    # Persist logs
     deploy:
       resources:
         reservations:
